<resources>
    <string name="app_name">StoryAppHanif</string>
    <string name="signup">Register</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Share your own story!</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_signup_page">Please complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your account and click the login button </string>
    <string name="title_login_page">Ready to share your story ?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="invalid_email">Invalid Email Addres\n</string>
    <string name="invalid_password">"Password must not be less than eight characters "</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="sample_description">Deskripsi</string>
    <string name="sample_name">Nama\n</string>
    <string name="story_image_desc">Story Image\n</string>
    <string name="story_image">Image Story</string>
    <string name="camera">Camera\n</string>
    <string name="gallery">Gallery\n</string>
    <string name="description_hint">Write your description here</string>
    <string name="upload">Upload\n</string>
    <string name="description">Description\n</string>
    <string name="logout_dialog">Logout</string>
    <string name="logout_message">"Are you sure want to logout ? "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="login_message">You have succesfully Login</string>
    <string name="dialog_positive">Next\n</string>
    <string name="login_failed_title">Sorry!</string>
    <string name="login_failed_dialog">Login Failed ! Check your email and password correctly</string>
    <string name="register_fail">Register failed , please check and make sure enter the data correctly</string>
    <string name="register_dialog_message">Your account is created</string>
    <string name="dialog_positive_button">next</string>
    <string name="detail_title">Detail</string>
    <string name="upload_title">Upload\n</string>
    <string name="upload_message">Upload Success</string>
    <string name="empty_warning">No image selected</string>
    <string name="desc_empty">Please fill out the description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_upload_text">Add Your Current Location</string>
    <string name="no_location">Location is not available</string>
    <string name="gps_tittle">Your GPS is not active</string>
    <string name="gps_message">Please turn on your GPS to share your location</string>
    <string name="refresh">Refresh\n</string>
    <string name="map">Map\n</string>
    <string name="logout_menu">Logout\n</string>

</resources>